# pnuai-c-03-scanops

./: .gitignore  README.md  ScanOps_사업계획서_v6.docx  ScanOps_수정사업계획서_v5.docx
scanops-model/: .env.example  .gitignore  BRANCH_COMPARISON.md  Dockerfile  Dockerfile.rebuild-api  Dockerfile.v15  Dockerfile.v17  README.md  docker-compose.v15.yml  docker-compose.yml  pyproject.toml  requirements.txt
scanops-model/deploy_v13/: Modelfile  README_배포.md
scanops-model/deploy_v15/: Modelfile.v13  Modelfile.v14  README_배포.md  setup.sh
scanops-model/deploy_v17/: Modelfile.v16_1  README_배포.md  setup.sh
scanops-model/ml/: README.md  build_dataset.py  build_dataset_v12.py  build_dataset_v13.py  build_dataset_v14.py  build_dataset_v16.py  config.py  evaluate.py  train.py  visualize.py
scanops-model/rebuild/: audit_false_positives.py  bench_common.py  build_cleanvul_heldout.py  build_dataset.py  build_dataset_v2.py  build_external_bench.py  compare_apis.py  compare_claude_external.py  eval_external.py  eval_gguf.py  eval_test.py  make_comparison.py  merge.py  run_external.sh  run_night.sh  run_v2.sh  train_qlora.py
scanops-model/reports/: RUNPOD_MIGRATION.md  ScanOps_Final_Report_v3.md  ScanOps_Final_Report_v4.md  ScanOps_Final_Report_v5.md  ScanOps_vs_Grok_그래프벤치마크_v6.md  ScanOps_모델_아키텍처_정리_노션용.md  ScanOps_모델_진행보고_교수님용_노션.md  ScanOps_솔루션_사업계획서용.md  V12_RESULTS.md  V12_RUNBOOK.md  V13_BASELINE.md  V13_RESULTS.md  V13_RUNBOOK.md  V14_PLAN.md  V16_RESULTS.md  benchmark_local_20260513_1611.html  benchmark_local_20260513_1746.html  branch_comparison.md  (+10 more)
(+321 files in other folders)
